fixed issue with white space appearing on righthand side of entire html doc, something to do with overflow hidden

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -4,6 +4,15 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
  */
 
+ html,body
+ {
+     width: 100%;
+     height: 100%;
+     margin: 0px;
+     padding: 0px;
+     overflow-x: hidden; 
+ } 
+
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
